--- a/Translations/Cursos.g.xlf
+++ b/Translations/Cursos.g.xlf
@@ -3,15 +3,210 @@
   <file datatype="xml" source-language="en-US" target-language="en-US" original="Cursos">
     <body>
       <group id="body">
+        <trans-unit id="Table 3534050887 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Table</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Tabla Curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 3461834954 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Description</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Descripción"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Description - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 1333289741 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Hours</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Horas"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Hours - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 2273653569 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Language Code</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Codigo de Lenguage"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Language Code - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 2961552353 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Name</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Nombre"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Name - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 3534050887 - Field 4200184881 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>No. from caption</source>
-          <note from="Developer" annotates="general" priority="2">ESP="Nº", FR="Numero"</note>
+          <note from="Developer" annotates="general" priority="2">ESP="Nº", FRA="Numero"</note>
           <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field No. - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 1351594800 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>No. Series</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Nº Serie"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field No. Series - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 3635338911 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Price</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Precio"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Price - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 4167374654 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Type (Enum)</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Tipo (Enum)"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Type (Enum) - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 63134078 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Type (Option)</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Tipo (Opcion)"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Type (Option) - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 3534050887 - Field 63134078 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve">
+          <source> ,Instructor-Lead, Video Tutorial</source>
+          <note from="Developer" annotates="general" priority="2">ESP=" ,Guiador por profesor, Video Tutorial"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course - Field Type (Option) - Property OptionCaption</note>
+        </trans-unit>
+        <trans-unit id="Table 1535828835 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Edition</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Edición Curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course Edition - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 1535828835 - Field 1667959142 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course No.</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Nº Curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course Edition - Field Course No. - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 1535828835 - Field 2511900496 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Edition</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Edición"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course Edition - Field Edition - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 1535828835 - Field 495568652 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Max. Students</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Nº Max. Alumnos"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course Edition - Field Max. Students - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 1535828835 - Field 474480784 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Start Date</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Fecha Inicio"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course Edition - Field Start Date - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 191477398 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Courses Setup</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Configuración Cursos"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course Setup - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Table 191477398 - Field 3345900843 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Nos.</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Nº Cursos"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table Course Setup - Field Course Nos. - Property Caption</note>
         </trans-unit>
         <trans-unit id="Table 191477398 - Field 1663593181 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Primary Key</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table Course Setup - Field Primary Key - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Card</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Ficha Curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 2445482498 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>General</source>
+          <note from="Developer" annotates="general" priority="2">ESP="General"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control General - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 2961552353 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Name</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Nombre"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control Name - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 4200184881 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>No. from caption</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Nº"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control No. - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 1450094168 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Invoicing</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Facturación"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control Invoicing - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 250015302 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>TrainingDetails</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Detalles de Entrenamiento"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control TrainingDetails - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 3461834954 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Description</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Descripción"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control Description - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 1333289741 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Hours</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Horas"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control Hours - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 2273653569 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Language Code</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Codigo de Lenguage"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control Language Code - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1158824803 - Control 4167374654 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Type (Enum)</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Tipo (Enum)"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Card - Control Type (Enum) - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 3965590126 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Editions</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Ediciones curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Editions - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1812095329 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Editions</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Ediciones curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course Editions Factbox - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1050106769 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Courses</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Cursos"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course List - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1050106769 - Action 2360815950 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Editions</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Ediciones"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course List - Action CourseEditions - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 1050106769 - Action 1587086413 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>MyCategory</source>
+          <note from="Developer" annotates="general" priority="2">ESP="MiCategoria"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Course List - Action Category_Category4 - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 3691325147 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Courses Setup</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Configuración Setup"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Courses Setup - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 3691325147 - Control 1532816877 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Numbering</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Numeración"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Courses Setup - Control Numbering - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Page 3691325147 - Control 3345900843 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Specifies the number series code you can use to assign numbers to Courses.</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Especifica el código de serie que quieres asignar a los cursos"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Page Courses Setup - Control Course Nos. - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="Enum 964565567 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Course Type</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Tipo Curso"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum Course Type - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 964565567 - EnumValue 2521317712 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Instructor-lead</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Guiador por profesor"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum Course Type - EnumValue Instructor-lead - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 964565567 - EnumValue 770452047 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Video Tutorial</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Video Tutorial"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum Course Type - EnumValue Video Tutorial - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PermissionSet 2736006848 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Permisions</source>
+          <note from="Developer" annotates="general" priority="2">ESP="Permisos"</note>
+          <note from="Xliff Generator" annotates="general" priority="3">PermissionSet CourseSUPER - Property Caption</note>
         </trans-unit>
       </group>
     </body>
